fixed the alignment

--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: lightpink;
 }
 
 .header-container{
@@ -24,16 +24,19 @@ body{
     float: left;
 }
 .item-left{
-    margin: 30px;
+    margin-top: 30px;
+    margin-left: 30px;
+    margin-right: 30px;
     float: left;
 }
 
 .item-list-right{
     list-style-type: none;
     float: right;
-    margin: 20px;
+    margin: 20px 20px 10px 20px;
 }
 .item-right{
+    display: flex;
     margin: 10px;
     float: left;
 }
@@ -42,19 +45,28 @@ body{
     background-color:aquamarine;
     height: 800px;
     width: 100%;
+    
 }
-
+.project{
+    font-size: 26px;
+    text-align: center;
+    font-weight:bold;
+    border: 1px solid white; 
+    padding-top: 15px;
+    padding-bottom: 5px;
+}
 .body-container img{
-    height: 20%;
-    width: 20%;
-    margin: 5px;
+    height: 160px;
+    width: 270px;
+    padding: 5px;
     display: block;
 }
 
-/* .content{
+.content{
+    align-items: center;
     float: left;
-    display: flex;
-} */
+    padding: 20px;
+}
 
 .description{
     text-align: justify;
